fixed resize cause overflow to appear

--- a/welcomeback/css/style.css
+++ b/welcomeback/css/style.css
@@ -14,6 +14,7 @@
 body {
   font-family: 'Titillium Web', sans-serif;
   background: rgb(44, 44, 44);
+  overflow: hidden;
   max-width: 100vw;
   max-height: 100vh;
   grid-template-columns: repeat(4, 1f);
